[package]
name = "rustgovernor"
version = "1.0.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/ArjitSinghLodhi/LinuxRustGovernor"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
anyhow = "1.0.95"
sysinfo = "0.38.3"
single-instance = "0.3.2"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
debug = true
strip = false
